# Web

./: .gitmodules  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: flyio.yaml
src/: main.rs
src/routes/: apis.rs  generic.rs  mod.rs  structs.rs  whitelist.rs
