[package]
name = "liquid_breakout_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "2.0.0", features = ["websocket"] }
poem-openapi = { version = "4.0.0", features = ["swagger-ui"] }
tokio = { version = "1", features = ["full"] }
liquid_breakout_backend = { git = "https://github.com/Liquid-Breakout/Backend.git" }
line-col = "0.2.1"
full_moon = { version = "0.19.0", features = ["roblox"]}
futures-util = "0.3.30"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
